// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RuleContent opt 1`] = `
<body>
  <div>
    <div
      data-rbd-droppable-context-id="1"
      data-rbd-droppable-id="droppable"
    >
      <div>
        <div
          aria-describedby="rbd-hidden-text-1-hidden-text-3"
          data-rbd-drag-handle-context-id="1"
          data-rbd-drag-handle-draggable-id="rule_testId1"
          data-rbd-draggable-context-id="1"
          data-rbd-draggable-id="rule_testId1"
          draggable="false"
          role="button"
          tabindex="0"
        >
          <div
            class="rule"
          >
            <div
              class="accordion ui"
            >
              <div
                class="active title rule-accordion-title"
              >
                <span
                  class="iconfont icon-angle-down icon-accordion"
                  customclass="icon-accordion"
                  type="angle-down"
                />
                <div
                  class="rule-title"
                >
                  <div
                    class="equal width fields rule-title-input"
                  >
                    <div
                      class="field"
                    >
                      <div
                        class="field rule-input"
                      >
                        <div
                          class="ui input"
                        >
                          <input
                            placeholder="Rule 1"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <span
                    class="rule-title-operation"
                  >
                    <span
                      class="iconfont icon-drag icon-drag"
                      customclass="icon-drag"
                      type="drag"
                    />
                    <span
                      class="iconfont icon-archive icon-archive"
                      customclass="icon-archive"
                      type="archive"
                    />
                  </span>
                </div>
              </div>
              <div
                class="content active"
              >
                <div
                  class="rule-content"
                >
                  <div
                    class="rule-add-one"
                  >
                    <button
                      class="ui secondary button rule-add-btn"
                      type="button"
                    >
                      <span
                        class="iconfont icon-add iconfont"
                        customclass="iconfont"
                        type="add"
                      />
                      Add
                    </button>
                  </div>
                  <div
                    class="serve"
                  >
                    <div
                      class="serve-select"
                    >
                      <span
                        class="serve-text"
                      >
                        <span
                          class="label-required"
                        >
                          *
                        </span>
                        Serve
                      </span>
                      <div
                        class="field serve-form-field"
                        style="width: 308px;"
                      >
                        <div
                          aria-expanded="false"
                          class="ui floating selection dropdown serve-dropdown"
                          name="rule_testId1_serve"
                          role="listbox"
                          style="width: 308px;"
                          tabindex="0"
                        >
                          <div
                            aria-atomic="true"
                            aria-live="polite"
                            class="divider text"
                            role="alert"
                          >
                            Please select serve
                          </div>
                          <span
                            class="iconfont icon-angle-down angle-down"
                            customclass="angle-down"
                            type="angle-down"
                          />
                          <div
                            class="menu transition"
                          >
                            <div
                              aria-checked="false"
                              aria-selected="true"
                              class="selected item"
                              role="option"
                              style="pointer-events: all;"
                            >
                              <div
                                class="text dropdown-variation"
                              >
                                <span
                                  class="dropdown-variation-color"
                                  style="background: rgb(85, 110, 230);"
                                />
                                <span
                                  class="dropdown-variation-text"
                                >
                                  name
                                </span>
                              </div>
                            </div>
                            <div
                              aria-checked="false"
                              aria-selected="false"
                              class="item"
                              role="option"
                              style="pointer-events: all;"
                            >
                              <span
                                class="text"
                              >
                                a percentage rollout
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      Í
    </div>
  </div>
  <div
    aria-atomic="true"
    aria-live="assertive"
    id="rbd-announcement-1"
    style="position: absolute; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%);"
  />
  <div
    id="rbd-hidden-text-1-hidden-text-3"
    style="display: none;"
  >
    
  Press space bar to start a drag.
  When dragging you can use the arrow keys to move the item around and escape to cancel.
  Some screen readers may require you to be in focus mode or to use your pass through key

  </div>
  <div
    style="display: flex; position: absolute; left: 0px; top: 0px; right: 0px; transform: translate(0px, 0px);"
  >
    <div
      class="ui bottom right basic popup transition visible popup"
      style="position: initial;"
    >
      <div
        class="menu"
      >
        <div
          class="menu-item"
        >
          string
        </div>
        <div
          class="menu-item"
        >
          number
        </div>
        <div
          class="menu-item"
        >
          datetime
        </div>
        <div
          class="menu-item"
        >
          semver
        </div>
        <div
          class="menu-item"
        >
          segment
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`RuleContent opt 2`] = `
<div>
  <div>
    <div
      data-rbd-droppable-context-id="1"
      data-rbd-droppable-id="droppable"
    >
      <div>
        <div
          aria-describedby="rbd-hidden-text-1-hidden-text-3"
          data-rbd-drag-handle-context-id="1"
          data-rbd-drag-handle-draggable-id="rule_testId1"
          data-rbd-draggable-context-id="1"
          data-rbd-draggable-id="rule_testId1"
          draggable="false"
          role="button"
          tabindex="0"
        >
          <div
            class="rule"
          >
            <div
              class="accordion ui"
            >
              <div
                class="active title rule-accordion-title"
              >
                <span
                  class="iconfont icon-angle-down icon-accordion"
                  customclass="icon-accordion"
                  type="angle-down"
                />
                <div
                  class="rule-title"
                >
                  <div
                    class="equal width fields rule-title-input"
                  >
                    <div
                      class="field"
                    >
                      <div
                        class="field rule-input"
                      >
                        <div
                          class="ui input"
                        >
                          <input
                            placeholder="Rule 1"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <span
                    class="rule-title-operation"
                  >
                    <span
                      class="iconfont icon-drag icon-drag"
                      customclass="icon-drag"
                      type="drag"
                    />
                    <span
                      class="iconfont icon-archive icon-archive"
                      customclass="icon-archive"
                      type="archive"
                    />
                  </span>
                </div>
              </div>
              <div
                class="content active"
              >
                <div
                  class="rule-content"
                >
                  <div
                    class="rule-item"
                  >
                    <span
                      class="rule-item-prefix rule-item-first"
                    >
                      <span
                        class="rule-item-text"
                      >
                        If
                      </span>
                    </span>
                    <div
                      class="equal width fields rule-item-left"
                    >
                      <div
                        class="field rule-item-subject"
                      >
                        <div
                          aria-expanded="false"
                          class="ui floating search selection dropdown rule-item-subject-dropdown"
                          name="test-name-1251"
                          role="combobox"
                        >
                          <input
                            aria-autocomplete="list"
                            autocomplete="off"
                            class="search"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                          <div
                            aria-atomic="true"
                            aria-live="polite"
                            class="divider default text"
                            role="alert"
                          >
                            Enter a subject
                          </div>
                          <div
                            class="menu transition"
                            role="listbox"
                          />
                        </div>
                      </div>
                      <div
                        class="field rule-item-operator"
                      >
                        <div
                          aria-expanded="false"
                          class="ui floating selection dropdown rule-item-operator-dropdown"
                          name="test-name-1748"
                          role="listbox"
                          tabindex="0"
                        >
                          <div
                            aria-atomic="true"
                            aria-live="polite"
                            class="divider default text"
                            role="alert"
                          >
                            Select an operator
                          </div>
                          <div
                            class="rule-item-type"
                          >
                            <div
                              class="rule-item-type-text"
                            >
                              number
                            </div>
                          </div>
                          <span
                            class="iconfont icon-angle-down angle-down"
                            customclass="angle-down"
                            type="angle-down"
                          />
                          <div
                            class="menu transition"
                          >
                            <div
                              aria-checked="false"
                              aria-selected="true"
                              class="selected item"
                              role="option"
                              style="pointer-events: all;"
                            >
                              <span
                                class="text"
                              >
                                =
                              </span>
                            </div>
                            <div
                              aria-checked="false"
                              aria-selected="false"
                              class="item"
                              role="option"
                              style="pointer-events: all;"
                            >
                              <span
                                class="text"
                              >
                                !=
                              </span>
                            </div>
                            <div
                              aria-checked="false"
                              aria-selected="false"
                              class="item"
                              role="option"
                              style="pointer-events: all;"
                            >
                              <span
                                class="text"
                              >
                                &lt;
                              </span>
                            </div>
                            <div
                              aria-checked="false"
                              aria-selected="false"
                              class="item"
                              role="option"
                              style="pointer-events: all;"
                            >
                              <span
                                class="text"
                              >
                                &lt;=
                              </span>
                            </div>
                            <div
                              aria-checked="false"
                              aria-selected="false"
                              class="item"
                              role="option"
                              style="pointer-events: all;"
                            >
                              <span
                                class="text"
                              >
                                &gt;
                              </span>
                            </div>
                            <div
                              aria-checked="false"
                              aria-selected="false"
                              class="item"
                              role="option"
                              style="pointer-events: all;"
                            >
                              <span
                                class="text"
                              >
                                &gt;=
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="six wide field"
                      >
                        <div
                          aria-expanded="false"
                          class="ui floating multiple search selection dropdown"
                          name="test-name-3155"
                          role="combobox"
                        >
                          <input
                            aria-autocomplete="list"
                            autocomplete="off"
                            class="search"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                          <span
                            class="sizer"
                          />
                          <div
                            aria-atomic="true"
                            aria-live="polite"
                            class="divider default text"
                            role="alert"
                          >
                            Enter some values
                          </div>
                          <div
                            aria-multiselectable="true"
                            class="menu transition"
                            role="listbox"
                          />
                        </div>
                      </div>
                    </div>
                    <span
                      class="iconfont icon-minus icon-minus"
                      customclass="icon-minus"
                      type="minus"
                    />
                  </div>
                  <div
                    class="rule-item"
                  >
                    <span
                      class="rule-item-prefix"
                    >
                      <span
                        class="rule-item-text"
                      >
                        and
                      </span>
                    </span>
                    <div
                      class="equal width fields rule-item-left"
                    >
                      <div
                        class="field rule-item-subject"
                      >
                        <div
                          aria-expanded="false"
                          class="ui floating search selection dropdown rule-item-subject-dropdown"
                          name="test-name-3939"
                          role="combobox"
                        >
                          <input
                            aria-autocomplete="list"
                            autocomplete="off"
                            class="search"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                          <div
                            aria-atomic="true"
                            aria-live="polite"
                            class="divider default text"
                            role="alert"
                          >
                            Enter a subject
                          </div>
                          <div
                            class="menu transition"
                            role="listbox"
                          />
                        </div>
                      </div>
                      <div
                        class="field rule-item-operator"
                      >
                        <div
                          aria-expanded="false"
                          class="ui floating selection dropdown rule-item-operator-dropdown"
                          name="test-name-4436"
                          role="listbox"
                          tabindex="0"
                        >
                          <div
                            aria-atomic="true"
                            aria-live="polite"
                            class="divider default text"
                            role="alert"
                          >
                            Select an operator
                          </div>
                          <div
                            class="rule-item-type"
                          >
                            <div
                              class="rule-item-type-text"
                            >
                              datetime
                            </div>
                          </div>
                          <span
                            class="iconfont icon-angle-down angle-down"
                            customclass="angle-down"
                            type="angle-down"
                          />
                          <div
                            class="menu transition"
                          >
                            <div
                              aria-checked="false"
                              aria-selected="true"
                              class="selected item"
                              role="option"
                              style="pointer-events: all;"
                            >
                              <span
                                class="text"
                              >
                                before
                              </span>
                            </div>
                            <div
                              aria-checked="false"
                              aria-selected="false"
                              class="item"
                              role="option"
                              style="pointer-events: all;"
                            >
                              <span
                                class="text"
                              >
                                after
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="six wide field rule-item-datetime"
                        name="test-name-5263"
                      >
                        <div
                          class="rdt"
                        >
                          <input
                            class="form-control"
                            placeholder="Please select"
                            type="text"
                            value="test_value"
                          />
                          <div
                            class="rdtPicker"
                          >
                            <div
                              class="rdtDays"
                            >
                              <table>
                                <thead>
                                  <tr>
                                    <th
                                      class="rdtPrev"
                                    >
                                      <span>
                                        ‹
                                      </span>
                                    </th>
                                    <th
                                      class="rdtSwitch"
                                      colspan="5"
                                      data-value="10"
                                    >
                                      November 2022
                                    </th>
                                    <th
                                      class="rdtNext"
                                    >
                                      <span>
                                        ›
                                      </span>
                                    </th>
                                  </tr>
                                  <tr>
                                    <th
                                      class="dow"
                                    >
                                      Su
                                    </th>
                                    <th
                                      class="dow"
                                    >
                                      Mo
                                    </th>
                                    <th
                                      class="dow"
                                    >
                                      Tu
                                    </th>
                                    <th
                                      class="dow"
                                    >
                                      We
                                    </th>
                                    <th
                                      class="dow"
                                    >
                                      Th
                                    </th>
                                    <th
                                      class="dow"
                                    >
                                      Fr
                                    </th>
                                    <th
                                      class="dow"
                                    >
                                      Sa
                                    </th>
                                  </tr>
                                </thead>
                                <tbody>
                                  <tr>
                                    <td
                                      class="rdtDay rdtOld"
                                      data-month="9"
                                      data-value="30"
                                      data-year="2022"
                                    >
                                      30
                                    </td>
                                    <td
                                      class="rdtDay rdtOld"
                                      data-month="9"
                                      data-value="31"
                                      data-year="2022"
                                    >
                                      31
                                    </td>
                                    <td
                                      class="rdtDay"
                                      data-month="10"
                                      data-value="1"
                                      data-year="2022"
                                    >
                                      1
                                    </td>
                                    <td
                                      class="rdtDay"
                                      data-month="10"
                                      data-value="2"
                                      data-year="2022"
                                    >
                                      2
                                    </td>
                                    <td
                                      class="rdtDay"
                                      data-month="10"
                                      data-value="3"
                                      data-year="2022"
                                    >
                                      3
                                    </td>
                                    <td
                                      class="rdtDay"
                                      data-month="10"
                                      data-value="4"
                                      data-year="2022"
                                    >
                                      4
                                    </td>
                                    <td
                                      class="rdtDay"
                                      data-month="10"
                                      data-value="5"
                                      data-year="2022"
                                    >
                                      5
                                    </td>
                                  </tr>
                                  <tr>
                                    <td
                                      class="rdtDay"
                                      data-month="10"
                                      data-value="6"
                                      data-year="2022"
                                    >
                                      6
                                    </td>
                                    <td
                                      class="rdtDay"
                                      data-month="10"
                                      data-value="7"
                                      data-year="2022"
                                    >
                                      7
                                    </td>
                                    <td
                                      class="rdtDay"
                                      data-month="10"
                                      data-value="8"
                                      data-year="2022"
                                    >
                                      8
                                    </td>
                                    <td
                                      class="rdtDay"
                                      data-month="10"
                                      data-value="9"
                                      data-year="2022"
                                    >
                                      9
                                    </td>
                                    <td
                                      class="rdtDay"
                                      data-month="10"
                                      data-value="10"
                                      data-year="2022"
                                    >
                                      10
                                    </td>
                                    <td
                                      class="rdtDay"
                                      data-month="10"
                                      data-value="11"
                                      data-year="2022"
                                    >
                                      11
                                    </td>
                                    <td
                                      class="rdtDay"
                                      data-month="10"
                                      data-value="12"
                                      data-year="2022"
                                    >
                                      12
                                    </td>
                                  </tr>
                                  <tr>
                                    <td
                                      class="rdtDay"
                                      data-month="10"
                                      data-value="13"
                                      data-year="2022"
                                    >
                                      13
                                    </td>
                                    <td
                                      class="rdtDay"
                                      data-month="10"
                                      data-value="14"
                                      data-year="2022"
                                    >
                                      14
                                    </td>
                                    <td
                                      class="rdtDay"
                                      data-month="10"
                                      data-value="15"
                                      data-year="2022"
                                    >
                                      15
                                    </td>
                                    <td
                                      class="rdtDay"
                                      data-month="10"
                                      data-value="16"
                                      data-year="2022"
                                    >
                                      16
                                    </td>
                                    <td
                                      class="rdtDay"
                                      data-month="10"
                                      data-value="17"
                                      data-year="2022"
                                    >
                                      17
                                    </td>
                                    <td
                                      class="rdtDay"
                                      data-month="10"
                                      data-value="18"
                                      data-year="2022"
                                    >
                                      18
                                    </td>
                                    <td
                                      class="rdtDay"
                                      data-month="10"
                                      data-value="19"
                                      data-year="2022"
                                    >
                                      19
                                    </td>
                                  </tr>
                                  <tr>
                                    <td
                                      class="rdtDay"
                                      data-month="10"
                                      data-value="20"
                                      data-year="2022"
                                    >
                                      20
                                    </td>
                                    <td
                                      class="rdtDay"
                                      data-month="10"
                                      data-value="21"
                                      data-year="2022"
                                    >
                                      21
                                    </td>
                                    <td
                                      class="rdtDay"
                                      data-month="10"
                                      data-value="22"
                                      data-year="2022"
                                    >
                                      22
                                    </td>
                                    <td
                                      class="rdtDay"
                                      data-month="10"
                                      data-value="23"
                                      data-year="2022"
                                    >
                                      23
                                    </td>
                                    <td
                                      class="rdtDay"
                                      data-month="10"
                                      data-value="24"
                                      data-year="2022"
                                    >
                                      24
                                    </td>
                                    <td
                                      class="rdtDay"
                                      data-month="10"
                                      data-value="25"
                                      data-year="2022"
                                    >
                                      25
                                    </td>
                                    <td
                                      class="rdtDay"
                                      data-month="10"
                                      data-value="26"
                                      data-year="2022"
                                    >
                                      26
                                    </td>
                                  </tr>
                                  <tr>
                                    <td
                                      class="rdtDay"
                                      data-month="10"
                                      data-value="27"
                                      data-year="2022"
                                    >
                                      27
                                    </td>
                                    <td
                                      class="rdtDay"
                                      data-month="10"
                                      data-value="28"
                                      data-year="2022"
                                    >
                                      28
                                    </td>
                                    <td
                                      class="rdtDay"
                                      data-month="10"
                                      data-value="29"
                                      data-year="2022"
                                    >
                                      29
                                    </td>
                                    <td
                                      class="rdtDay"
                                      data-month="10"
                                      data-value="30"
                                      data-year="2022"
                                    >
                                      30
                                    </td>
                                    <td
                                      class="rdtDay rdtNew"
                                      data-month="11"
                                      data-value="1"
                                      data-year="2022"
                                    >
                                      1
                                    </td>
                                    <td
                                      class="rdtDay rdtNew"
                                      data-month="11"
                                      data-value="2"
                                      data-year="2022"
                                    >
                                      2
                                    </td>
                                    <td
                                      class="rdtDay rdtNew"
                                      data-month="11"
                                      data-value="3"
                                      data-year="2022"
                                    >
                                      3
                                    </td>
                                  </tr>
                                  <tr>
                                    <td
                                      class="rdtDay rdtNew"
                                      data-month="11"
                                      data-value="4"
                                      data-year="2022"
                                    >
                                      4
                                    </td>
                                    <td
                                      class="rdtDay rdtNew"
                                      data-month="11"
                                      data-value="5"
                                      data-year="2022"
                                    >
                                      5
                                    </td>
                                    <td
                                      class="rdtDay rdtNew"
                                      data-month="11"
                                      data-value="6"
                                      data-year="2022"
                                    >
                                      6
                                    </td>
                                    <td
                                      class="rdtDay rdtNew"
                                      data-month="11"
                                      data-value="7"
                                      data-year="2022"
                                    >
                                      7
                                    </td>
                                    <td
                                      class="rdtDay rdtNew"
                                      data-month="11"
                                      data-value="8"
                                      data-year="2022"
                                    >
                                      8
                                    </td>
                                    <td
                                      class="rdtDay rdtNew"
                                      data-month="11"
                                      data-value="9"
                                      data-year="2022"
                                    >
                                      9
                                    </td>
                                    <td
                                      class="rdtDay rdtNew"
                                      data-month="11"
                                      data-value="10"
                                      data-year="2022"
                                    >
                                      10
                                    </td>
                                  </tr>
                                </tbody>
                                <tfoot>
                                  <tr>
                                    <td
                                      class="rdtTimeToggle"
                                      colspan="7"
                                    >
                                      test_value
                                    </td>
                                  </tr>
                                </tfoot>
                              </table>
                            </div>
                          </div>
                        </div>
                        <img
                          alt="canlendar"
                          class="rule-item-datetime-canlendar"
                          src="calendar.svg"
                        />
                      </div>
                      <div
                        class="six wide field"
                      >
                        <div
                          aria-expanded="false"
                          class="ui floating search selection dropdown"
                          name="test-name-9379"
                          role="combobox"
                        >
                          <input
                            aria-autocomplete="list"
                            autocomplete="off"
                            class="search"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                          <div
                            aria-atomic="true"
                            aria-live="polite"
                            class="divider text"
                            role="alert"
                          >
                            UTC +8
                          </div>
                          <span
                            class="iconfont icon-angle-down angle-down"
                            customclass="angle-down"
                            type="angle-down"
                          />
                          <div
                            class="menu transition"
                            role="listbox"
                          >
                            <div
                              aria-checked="false"
                              aria-selected="false"
                              class="item"
                              role="option"
                              style="pointer-events: all;"
                            >
                              <span
                                class="text"
                              >
                                UTC +0
                              </span>
                            </div>
                            <div
                              aria-checked="false"
                              aria-selected="false"
                              class="item"
                              role="option"
                              style="pointer-events: all;"
                            >
                              <span
                                class="text"
                              >
                                UTC +1
                              </span>
                            </div>
                            <div
                              aria-checked="false"
                              aria-selected="false"
                              class="item"
                              role="option"
                              style="pointer-events: all;"
                            >
                              <span
                                class="text"
                              >
                                UTC +2
                              </span>
                            </div>
                            <div
                              aria-checked="false"
                              aria-selected="false"
                              class="item"
                              role="option"
                              style="pointer-events: all;"
                            >
                              <span
                                class="text"
                              >
                                UTC +3
                              </span>
                            </div>
                            <div
                              aria-checked="false"
                              aria-selected="false"
                              class="item"
                              role="option"
                              style="pointer-events: all;"
                            >
                              <span
                                class="text"
                              >
                                UTC +4
                              </span>
                            </div>
                            <div
                              aria-checked="false"
                              aria-selected="false"
                              class="item"
                              role="option"
                              style="pointer-events: all;"
                            >
                              <span
                                class="text"
                              >
                                UTC +5
                              </span>
                            </div>
                            <div
                              aria-checked="false"
                              aria-selected="false"
                              class="item"
                              role="option"
                              style="pointer-events: all;"
                            >
                              <span
                                class="text"
                              >
                                UTC +6
                              </span>
                            </div>
                            <div
                              aria-checked="false"
                              aria-selected="false"
                              class="item"
                              role="option"
                              style="pointer-events: all;"
                            >
                              <span
                                class="text"
                              >
                                UTC +7
                              </span>
                            </div>
                            <div
                              aria-checked="true"
                              aria-selected="true"
                              class="active selected item"
                              role="option"
                              style="pointer-events: all;"
                            >
                              <span
                                class="text"
                              >
                                UTC +8
                              </span>
                            </div>
                            <div
                              aria-checked="false"
                              aria-selected="false"
                              class="item"
                              role="option"
                              style="pointer-events: all;"
                            >
                              <span
                                class="text"
                              >
                                UTC +9
                              </span>
                            </div>
                            <div
                              aria-checked="false"
                              aria-selected="false"
                              class="item"
                              role="option"
                              style="pointer-events: all;"
                            >
                              <span
                                class="text"
                              >
                                UTC +10
                              </span>
                            </div>
                            <div
                              aria-checked="false"
                              aria-selected="false"
                              class="item"
                              role="option"
                              style="pointer-events: all;"
                            >
                              <span
                                class="text"
                              >
                                UTC +11
                              </span>
                            </div>
                            <div
                              aria-checked="false"
                              aria-selected="false"
                              class="item"
                              role="option"
                              style="pointer-events: all;"
                            >
                              <span
                                class="text"
                              >
                                UTC +12
                              </span>
                            </div>
                            <div
                              aria-checked="false"
                              aria-selected="false"
                              class="item"
                              role="option"
                              style="pointer-events: all;"
                            >
                              <span
                                class="text"
                              >
                                UTC -12
                              </span>
                            </div>
                            <div
                              aria-checked="false"
                              aria-selected="false"
                              class="item"
                              role="option"
                              style="pointer-events: all;"
                            >
                              <span
                                class="text"
                              >
                                UTC -11
                              </span>
                            </div>
                            <div
                              aria-checked="false"
                              aria-selected="false"
                              class="item"
                              role="option"
                              style="pointer-events: all;"
                            >
                              <span
                                class="text"
                              >
                                UTC -10
                              </span>
                            </div>
                            <div
                              aria-checked="false"
                              aria-selected="false"
                              class="item"
                              role="option"
                              style="pointer-events: all;"
                            >
                              <span
                                class="text"
                              >
                                UTC -9
                              </span>
                            </div>
                            <div
                              aria-checked="false"
                              aria-selected="false"
                              class="item"
                              role="option"
                              style="pointer-events: all;"
                            >
                              <span
                                class="text"
                              >
                                UTC -8
                              </span>
                            </div>
                            <div
                              aria-checked="false"
                              aria-selected="false"
                              class="item"
                              role="option"
                              style="pointer-events: all;"
                            >
                              <span
                                class="text"
                              >
                                UTC -7
                              </span>
                            </div>
                            <div
                              aria-checked="false"
                              aria-selected="false"
                              class="item"
                              role="option"
                              style="pointer-events: all;"
                            >
                              <span
                                class="text"
                              >
                                UTC -6
                              </span>
                            </div>
                            <div
                              aria-checked="false"
                              aria-selected="false"
                              class="item"
                              role="option"
                              style="pointer-events: all;"
                            >
                              <span
                                class="text"
                              >
                                UTC -5
                              </span>
                            </div>
                            <div
                              aria-checked="false"
                              aria-selected="false"
                              class="item"
                              role="option"
                              style="pointer-events: all;"
                            >
                              <span
                                class="text"
                              >
                                UTC -4
                              </span>
                            </div>
                            <div
                              aria-checked="false"
                              aria-selected="false"
                              class="item"
                              role="option"
                              style="pointer-events: all;"
                            >
                              <span
                                class="text"
                              >
                                UTC -3
                              </span>
                            </div>
                            <div
                              aria-checked="false"
                              aria-selected="false"
                              class="item"
                              role="option"
                              style="pointer-events: all;"
                            >
                              <span
                                class="text"
                              >
                                UTC -2
                              </span>
                            </div>
                            <div
                              aria-checked="false"
                              aria-selected="false"
                              class="item"
                              role="option"
                              style="pointer-events: all;"
                            >
                              <span
                                class="text"
                              >
                                UTC -1
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <span
                      class="iconfont icon-minus icon-minus"
                      customclass="icon-minus"
                      type="minus"
                    />
                  </div>
                  <div
                    class="rule-item"
                  >
                    <span
                      class="rule-item-prefix"
                    >
                      <span
                        class="rule-item-text"
                      >
                        and
                      </span>
                    </span>
                    <div
                      class="equal width fields rule-item-left"
                    >
                      <div
                        class="field rule-item-subject"
                      >
                        <div
                          aria-expanded="false"
                          class="ui floating search selection dropdown rule-item-subject-dropdown"
                          name="test-name-13751"
                          role="combobox"
                        >
                          <input
                            aria-autocomplete="list"
                            autocomplete="off"
                            class="search"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                          <div
                            aria-atomic="true"
                            aria-live="polite"
                            class="divider default text"
                            role="alert"
                          >
                            Enter a subject
                          </div>
                          <div
                            class="menu transition"
                            role="listbox"
                          />
                        </div>
                      </div>
                      <div
                        class="field rule-item-operator"
                      >
                        <div
                          aria-expanded="false"
                          class="ui floating selection dropdown rule-item-operator-dropdown"
                          name="test-name-14248"
                          role="listbox"
                          tabindex="0"
                        >
                          <div
                            aria-atomic="true"
                            aria-live="polite"
                            class="divider default text"
                            role="alert"
                          >
                            Select an operator
                          </div>
                          <div
                            class="rule-item-type"
                          >
                            <div
                              class="rule-item-type-text"
                            >
                              semver
                            </div>
                          </div>
                          <span
                            class="iconfont icon-angle-down angle-down"
                            customclass="angle-down"
                            type="angle-down"
                          />
                          <div
                            class="menu transition"
                          >
                            <div
                              aria-checked="false"
                              aria-selected="true"
                              class="selected item"
                              role="option"
                              style="pointer-events: all;"
                            >
                              <span
                                class="text"
                              >
                                =
                              </span>
                            </div>
                            <div
                              aria-checked="false"
                              aria-selected="false"
                              class="item"
                              role="option"
                              style="pointer-events: all;"
                            >
                              <span
                                class="text"
                              >
                                !=
                              </span>
                            </div>
                            <div
                              aria-checked="false"
                              aria-selected="false"
                              class="item"
                              role="option"
                              style="pointer-events: all;"
                            >
                              <span
                                class="text"
                              >
                                &lt;
                              </span>
                            </div>
                            <div
                              aria-checked="false"
                              aria-selected="false"
                              class="item"
                              role="option"
                              style="pointer-events: all;"
                            >
                              <span
                                class="text"
                              >
                                &lt;=
                              </span>
                            </div>
                            <div
                              aria-checked="false"
                              aria-selected="false"
                              class="item"
                              role="option"
                              style="pointer-events: all;"
                            >
                              <span
                                class="text"
                              >
                                &gt;
                              </span>
                            </div>
                            <div
                              aria-checked="false"
                              aria-selected="false"
                              class="item"
                              role="option"
                              style="pointer-events: all;"
                            >
                              <span
                                class="text"
                              >
                                &gt;=
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="six wide field"
                      >
                        <div
                          aria-expanded="false"
                          class="ui floating multiple search selection dropdown"
                          name="test-name-15655"
                          role="combobox"
                        >
                          <input
                            aria-autocomplete="list"
                            autocomplete="off"
                            class="search"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                          <span
                            class="sizer"
                          />
                          <div
                            aria-atomic="true"
                            aria-live="polite"
                            class="divider default text"
                            role="alert"
                          >
                            Enter some values
                          </div>
                          <div
                            aria-multiselectable="true"
                            class="menu transition"
                            role="listbox"
                          />
                        </div>
                      </div>
                    </div>
                    <span
                      class="iconfont icon-minus icon-minus"
                      customclass="icon-minus"
                      type="minus"
                    />
                  </div>
                  <div
                    class="rule-item"
                  >
                    <span
                      class="rule-item-prefix"
                    >
                      <span
                        class="rule-item-text"
                      >
                        and
                      </span>
                    </span>
                    <div
                      class="equal width fields rule-item-left"
                    >
                      <div
                        class="field rule-item-subject"
                      >
                        <div
                          aria-disabled="true"
                          aria-expanded="false"
                          class="ui disabled floating search selection dropdown rule-item-subject-dropdown"
                          name="test-name-16439"
                          role="combobox"
                        >
                          <input
                            aria-autocomplete="list"
                            autocomplete="off"
                            class="search"
                            tabindex="-1"
                            type="text"
                            value=""
                          />
                          <div
                            aria-atomic="true"
                            aria-live="polite"
                            class="divider text"
                            role="alert"
                          >
                            Enter a subject
                          </div>
                          <div
                            class="menu transition"
                            role="listbox"
                          />
                        </div>
                      </div>
                      <div
                        class="field rule-item-operator"
                      >
                        <div
                          aria-expanded="false"
                          class="ui floating selection dropdown rule-item-operator-dropdown"
                          name="test-name-16959"
                          role="listbox"
                          tabindex="0"
                        >
                          <div
                            aria-atomic="true"
                            aria-live="polite"
                            class="divider default text"
                            role="alert"
                          >
                            Select an operator
                          </div>
                          <div
                            class="rule-item-type"
                          >
                            <div
                              class="rule-item-type-text"
                            >
                              segment
                            </div>
                          </div>
                          <span
                            class="iconfont icon-angle-down angle-down"
                            customclass="angle-down"
                            type="angle-down"
                          />
                          <div
                            class="menu transition"
                          >
                            <div
                              aria-checked="false"
                              aria-selected="true"
                              class="selected item"
                              role="option"
                              style="pointer-events: all;"
                            >
                              <span
                                class="text"
                              >
                                is in segments
                              </span>
                            </div>
                            <div
                              aria-checked="false"
                              aria-selected="false"
                              class="item"
                              role="option"
                              style="pointer-events: all;"
                            >
                              <span
                                class="text"
                              >
                                is not in segments
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="six wide field"
                      >
                        <div
                          aria-expanded="true"
                          class="ui active visible floating multiple search selection dropdown"
                          name="test-name-17834"
                          role="combobox"
                        >
                          <input
                            aria-autocomplete="list"
                            autocomplete="off"
                            class="search"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                          <span
                            class="sizer"
                          />
                          <div
                            aria-atomic="true"
                            aria-live="polite"
                            class="divider default text"
                            role="alert"
                          >
                            Please select
                          </div>
                          <span
                            class="iconfont icon-angle-down angle-down"
                            customclass="angle-down"
                            type="angle-down"
                          />
                          <div
                            aria-multiselectable="true"
                            class="visible menu transition"
                            role="listbox"
                          />
                        </div>
                      </div>
                    </div>
                    <span
                      class="iconfont icon-minus icon-minus"
                      customclass="icon-minus"
                      type="minus"
                    />
                  </div>
                  <div
                    class="rule-add"
                  >
                    <button
                      class="ui secondary button rule-add-btn"
                      type="button"
                    >
                      <span
                        class="iconfont icon-add iconfont"
                        customclass="iconfont"
                        type="add"
                      />
                      Add
                    </button>
                  </div>
                  <div
                    class="serve"
                  >
                    <div
                      class="serve-select"
                    >
                      <span
                        class="serve-text"
                      >
                        <span
                          class="label-required"
                        >
                          *
                        </span>
                        Serve
                      </span>
                      <div
                        class="field serve-form-field"
                        style="width: 308px;"
                      >
                        <div
                          aria-expanded="false"
                          class="ui floating selection dropdown serve-dropdown"
                          name="test-name-18936"
                          role="listbox"
                          style="width: 308px;"
                          tabindex="0"
                        >
                          <div
                            aria-atomic="true"
                            aria-live="polite"
                            class="divider text"
                            role="alert"
                          >
                            Please select serve
                          </div>
                          <span
                            class="iconfont icon-angle-down angle-down"
                            customclass="angle-down"
                            type="angle-down"
                          />
                          <div
                            class="menu transition"
                          >
                            <div
                              aria-checked="false"
                              aria-selected="true"
                              class="selected item"
                              role="option"
                              style="pointer-events: all;"
                            >
                              <div
                                class="text dropdown-variation"
                              >
                                <span
                                  class="dropdown-variation-color"
                                  style="background: rgb(85, 110, 230);"
                                />
                                <span
                                  class="dropdown-variation-text"
                                >
                                  name
                                </span>
                              </div>
                            </div>
                            <div
                              aria-checked="false"
                              aria-selected="false"
                              class="item"
                              role="option"
                              style="pointer-events: all;"
                            >
                              <span
                                class="text"
                              >
                                a percentage rollout
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      Í
    </div>
  </div>
  <div
    aria-atomic="true"
    aria-live="assertive"
    id="rbd-announcement-1"
    style="position: absolute; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%);"
  />
  <div
    id="rbd-hidden-text-1-hidden-text-3"
    style="display: none;"
  >
    
  Press space bar to start a drag.
  When dragging you can use the arrow keys to move the item around and escape to cancel.
  Some screen readers may require you to be in focus mode or to use your pass through key

  </div>
</div>
`;

exports[`RuleContent snapshot 1`] = `
<DocumentFragment>
  <div
    data-rbd-droppable-context-id="0"
    data-rbd-droppable-id="droppable"
  >
    <div>
      <div
        aria-describedby="rbd-hidden-text-0-hidden-text-0"
        data-rbd-drag-handle-context-id="0"
        data-rbd-drag-handle-draggable-id="rule_testId1"
        data-rbd-draggable-context-id="0"
        data-rbd-draggable-id="rule_testId1"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="rule"
        >
          <div
            class="accordion ui"
          >
            <div
              class="title rule-accordion-title"
            >
              <span
                class="iconfont icon-angle-right icon-accordion"
                customclass="icon-accordion"
                type="angle-right"
              />
              <div
                class="rule-title"
              >
                <div
                  class="equal width fields rule-title-input"
                >
                  <div
                    class="field"
                  >
                    <div
                      class="field rule-input"
                    >
                      <div
                        class="ui input"
                      >
                        <input
                          placeholder="Rule 1"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="content"
            >
              <div
                class="rule-content"
              >
                <div
                  class="rule-add-one"
                >
                  <button
                    class="ui secondary button rule-add-btn"
                    type="button"
                  >
                    <span
                      class="iconfont icon-add iconfont"
                      customclass="iconfont"
                      type="add"
                    />
                    Add
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    Í
  </div>
</DocumentFragment>
`;

exports[`RuleContent snapshot 2`] = `
<DocumentFragment>
  <div
    data-rbd-droppable-context-id="0"
    data-rbd-droppable-id="droppable"
  >
    <div>
      <div
        data-rbd-draggable-context-id="0"
        data-rbd-draggable-id="rule_testId1"
      >
        <div
          class="rule"
        >
          <div
            class="accordion ui"
          >
            <div
              class="active title rule-accordion-title"
            >
              <span
                class="iconfont icon-angle-down icon-accordion"
                customclass="icon-accordion"
                type="angle-down"
              />
              <div
                class="rule-title"
              >
                <div
                  class="equal width fields rule-title-input"
                >
                  <div
                    class="field"
                  >
                    <div
                      class="disabled field rule-input"
                    >
                      <div
                        class="ui disabled input"
                      >
                        <input
                          disabled=""
                          placeholder="Rule 1"
                          tabindex="-1"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="content active"
            >
              <div
                class="rule-content"
              >
                <div
                  class="rule-add-one"
                >
                  <button
                    class="ui secondary disabled button rule-add-btn"
                    disabled=""
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="iconfont icon-add iconfont"
                      customclass="iconfont"
                      type="add"
                    />
                    Add
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    Í
  </div>
</DocumentFragment>
`;
